# german-nouns

./: .gitignore  .gitmodules  .~lock.nouns.csv#  CHANGELOG.md  README.md  local.db  nouns.csv  pyproject.toml  requirements.txt  setup.sh
_parse/: merge.py
_parse/moprhy/: moprhy_export.py
_parse/wiktionary/: parse.py
_pipeline/: 01_parse.py  02_clean.py
create_csv/: main.py  save.py
create_db/: extend_flexion.py  main.py  save.py
german_nouns/: config.py
german_nouns/create_csv/: __init__.py  __main__.py
german_nouns/lookup/: __init__.py  examples.py
german_nouns/parse_dump/: __main__.py  extend_flexion.py  save.py
german_nouns/query/: NounDictionary.py  __init__.py  __main__.py  examples.py
pipeline/: 01_parse.py  02_clean.py
test/lookup/: test_lookup.py
