[tool.poetry]
name = "german-nouns"
version = "1.2.1"
description = "A list of ~98,000 German nouns and their grammatical properties compiled from WiktionaryDE as CSV file. Plus a module to look up the data and parse compound words."
authors = ["Gregor Weichbrodt <gregorweichbrodt@gmail.com>"]
license = "CC BY-SA 4.0"
readme = "README.md"
homepage = "https://github.com/gambolputty/german-nouns"
repository = "https://github.com/gambolputty/german-nouns"
keywords = ["german", "nouns", "words", "compound words", "lookup", "wiktionary", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Natural Language :: German",
    "Topic :: Text Processing"
]
include = [
    "CHANGELOG.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
bz2file = "^0.98"
wiktionary-de-parser = "^0.8.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
ipykernel = "^6.5.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
